.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:41:10 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o   
Finished building target: FeatureLKT
 
15:42:05 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
make: Nothing to be done for `all'.
12:00:40 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
make: Nothing to be done for `all'.
12:00:04 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o   
Finished building target: FeatureLKT
 
12:00:50 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o   
Finished building target: FeatureLKT
 
12:09:20 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o   
Finished building target: FeatureLKT
 
12:14:59 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
../src/FeatureLKT.cpp:20:16: error: expected ';' at end of declaration
    Mat matMask
               ^
               ;
1 error generated.
make: *** [src/FeatureLKT.o] Error 1
12:15:10 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building file: ../src/lkdemo.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/lkdemo.d" -MT"src/lkdemo.o" -o "src/lkdemo.o" "../src/lkdemo.cpp"
Finished building: ../src/lkdemo.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:19:10 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:26:30 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:27:04 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:28:58 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:31:57 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:32:36 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:32:53 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
12:33:09 **** Incremental Build of configuration Debug for project FeatureLKT ****
make all 
Building file: ../src/FeatureLKT.cpp
Invoking: Cross G++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 `pkg-config --cflags opencv` -MMD -MP -MF"src/FeatureLKT.d" -MT"src/FeatureLKT.o" -o "src/FeatureLKT.o" "../src/FeatureLKT.cpp"
Finished building: ../src/FeatureLKT.cpp
 
Building target: FeatureLKT
Invoking: Cross G++ Linker
g++ -Xlinker `pkg-config --libs opencv` -o "FeatureLKT"  ./src/FeatureLKT.o ./src/lkdemo.o   
Finished building target: FeatureLKT
 
